Fix spacing issue on index blog preview card

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -19,7 +19,7 @@
 .blogPostPreview {
   margin-bottom: 50px;
   height: auto;
-  padding: 30px 20px 40px 20px;
+  padding: 20px;
   transition: 0.5s;
 }
 
@@ -50,13 +50,19 @@
 
 .blogExcerpt {
   border: 5px solid black;
-  padding: 14px;
-  height: 150px;
-  font-weight: 600;
+  padding: 14px 14px 0px 14px;
   margin-bottom: 40px;
+  flex: 1;
+  display: flex;
+  /* flex-direction: column; */
+  /* justify-content: safe flex-end; */
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
-.blogExcerpt {
+.blogExcerpt p {
+  /* font-weight: 600; */
+  text-overflow: ellipsis;
   font-weight: 600;
 }
 
